finished song page

--- a/src/styles/Song.css
+++ b/src/styles/Song.css
@@ -1,8 +1,4 @@
-
-
 .content {
-    background-color:rgba(35, 9, 46, 0.9) !important;
-    color: white;
+    color: rgba(33, 4, 39, 0.9);
     text-align: center;
-    margin-top: 20px;
 }
